--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,7 +29,7 @@
       template:
         src: '{{ item }}.j2'
         dest: /etc/default/{{ item }}
-        mode: 0644
+        mode: '644'
       loop:
         - nfs-common
         - quota
@@ -41,7 +41,7 @@
       template:
         src: nfs-kernel-server.j2
         dest: /etc/default/nfs-kernel-server
-        mode: 0644
+        mode: '644'
       notify:
         - restart nfs-kernel-server
         - restart rpcbind
